--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -27,7 +27,7 @@
         <div class="hours hour6"></div>
         <div class="hours hour9"></div>
         <div class="hours hour12"></div>
-        <div class="city">Tokyo</div>
+        <div class="city Tokyocity">Tokyo</div>
       </div>
       <div class="temp-tokyo"><span class="text-london">Now <span class="tempTokyo"></span><span>°C</span>|<span class="tempFTokyo"></span><span>°F</span></div>
     </div>
@@ -48,53 +48,61 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
+
       font-family:'helvetica neue';
       text-align: center;
       font-size: 10px;
     }
 
     .body-container {
-     display: grid;
+      background: linear-gradient(to right , #0A8FFF,#123588);
+      background-size:cover;
+      display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 1fr auto 1fr;
     }
     .city {
       position: absolute;
       bottom: 30px;
-      left: 50px;
+      left: 30%;
       font-size: 30px;
+      font-weight: 600;
+      color: rgba(255,255,255,0.7);
+      z-index: auto;
     }
-    .clock {
-      width: 25rem;
-      height: 25rem;
-      border:3px solid black;
-      border-radius:50%;
-      margin:30px auto;
-      position: relative;
-      padding:1rem;
-      background-color: white;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+    .Tokyocity {
+      left: 33%;
     }
+        .clock {
+          width: 25rem;
+          height: 25rem;
+          border:5px solid rgba(255,255,255,0.8);
+          border-radius:50%;
+          margin:50px auto;
+          position: relative;
+          padding:2rem;
+          background: rgba(0, 0, 0, 0.2);
+          box-shadow:
+            0 0 0 4px rgba(0,0,0,0.1),
+            inset 0 0 0 3px #EFEFEF,
+            inset 0 0 10px black,
+            0 0 10px rgba(0,0,0,0.2);
+        }
 
-    .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-2px) translateX(30px); /* account for the height of the clock hands */
-    }
+        .clock-face {
+          position:relative;
+          width: 100%;
+          height: 100%;
+
+          transform: translateY(-3px); /* account for the height of the clock hands */
+        }
     .hour-hand {
-      width:45%;
-      height:10px;
+      width:50%;
+      height:8px;
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 80%;
+      transform-origin: 100%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
@@ -102,15 +110,14 @@
 
     .min-hand {
       width:50%;
-      height:10px;
+      height:5px;
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 80%;
+      transform-origin: 100%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      transform: translateY(-50px);
     }
     .second-hand {
       width:50%;
@@ -118,7 +125,7 @@
       background:red;
       position: absolute;
       top:50%;
-      transform-origin: 80%;
+      transform-origin: 100%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
@@ -129,74 +136,60 @@
       height:8px;
       background:black;
       position: absolute;
-      transform-origin: 100%;
-      margin: 0px;
       transform: rotate(90deg);
-      top:5%;
-      left: 30%;
-    }
-    .hoursTokio {
-      width:7%;
-      height:8px;
-      background:black;
-      position: absolute;
-      transform-origin: 100%;
-      margin: 0px;
-      transform: rotate(90deg);
-      top:5%;
-      left: 30%;
-    }
-    .hoursSydney {
-      width:7%;
-      height:8px;
-      background:black;
-      position: absolute;
-      transform-origin: 100%;
-      margin: 0px;
-      transform: rotate(90deg);
-      top:5%;
-      left: 30%;
     }
 
     .hour3 {
       transform: rotate(0deg);
       top:50%;
-      left:82%;
+      left:96%;
     }
 
 
     .hour6 {
+      padding: 0px;
+      margin: 0px;
       transform: rotate(90deg);
       top:100%;
-      left: 30%;
+      left:46%;
     }
 
     .hour9 {
       transform: rotate(0deg);
       top:50%;
-      left:-12%;
+      left:-3%;
     }
-
     .hour12 {
+      padding: 0px;
+      margin: 0px;
       transform: rotate(90deg);
-      top:5%;
-      left: 32%;
+      top:0%;
+      left:46%;
     }
     .temp {
       font-size: 30px;
     }
 
     .temp-london {
-        padding-top: 20px;
+        position: relative;
+        top: 50px;
         font-size: 30px;
+        font-weight: 600;
+        color: rgba(255,255,255,0.7);
     }
     .temp-tokyo {
-        padding-top: 20px;
-        font-size: 30px;
+      position: relative;
+      top: 50px;
+      font-size: 30px;
+      font-weight: 600;
+      color: rgba(255,255,255,0.7);
     }
     .temp-sydney {
-        padding-top: 20px;
-        font-size: 30px;
+      position: relative;
+      top: 50px;
+      font-size: 30px;
+      font-weight: 600;
+      color: rgba(255,255,255,0.7);
     }
 
 </style>
