--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -93,7 +93,6 @@
           position:relative;
           width: 100%;
           height: 100%;
-
           transform: translateY(-3px); /* account for the height of the clock hands */
         }
     .hour-hand {
@@ -102,7 +101,8 @@
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 100%;
+      left: 10%;
+      transform-origin: 80%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
@@ -114,7 +114,8 @@
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 100%;
+      left: 10%;
+      transform-origin: 80%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
@@ -125,7 +126,8 @@
       background:red;
       position: absolute;
       top:50%;
-      transform-origin: 100%;
+      left: 10%;
+      transform-origin: 80%;
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
