start of thutsday

--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -46,6 +46,7 @@
     </div>
 
 
+
   <style>
     html {
       background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
@@ -201,7 +202,7 @@
 
 </style>
 
-<script>
+<script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 3,cityid: '4005539',appid: '261e313010ab3d43b1344ab9eba64cfa',units: 'metric',containerid: 'openweathermap-widget-3',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();
 //  LONDON Clock starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
 let offset = '';
 let guadalajaraOffset = '';
